# GEHD

./: .editorconfig  .gitignore  ARCHITECTURE.md  CHANGELOG.md  DEVELOPMENT.md  GEHD.command  GEHD_v36_工业化评审报告.md  LICENSE  README.md  coverage.json  pyproject.toml  专家建议_从Python脚本到工业级幻觉核查软件.md
.workbuddy/memory/: 2026-05-08.md
config/: adjective_prefixes.json  blacklist.json  declaration_patterns.json  entity_patterns.json  exclude_words.json  l25_patterns.json  llm.json  pipeline.json  search.json  secrets.json.template  thresholds.json  whitelist.json
deliverables/engineering-assurance/: quality-baseline-GEHD-2026-05-09.md
docs/: COLLABORATION.md  README.md  ai-guide.md  architecture.md  development.md  p2-2-interface.md  plan.md
docs/designs/agents/: ci-role-design.md
docs/designs/architecture/: pipeline-v0.5.0.md  v0.4-roadmap.md
src/hallucination_checker/: __init__.py  __main__.py  logging_setup.py
src/hallucination_checker/cli/: __init__.py  main.py
src/hallucination_checker/engine/: __init__.py  checker.py  config.py  cross_validate.py  logger.py  pipeline.py
src/hallucination_checker/engine/extractors/: __init__.py  text_extractor.py
src/hallucination_checker/engine/layers/: __init__.py  l1_whitelist.py  l25_nonentity.py  l2_blacklist.py  l36_consistency.py  l37_declaration.py  l3_heuristic.py  l4_verify.py  l4_web_verify.py
src/hallucination_checker/engine/llm/: adapter.py  direct_verify.py  post_filter.py  pre_filter.py
src/hallucination_checker/engine/scorers/: __init__.py
src/hallucination_checker/engine/search/: __init__.py  adapter.py
src/hallucination_checker/gui/: __init__.py  __main__.py  main_window.py  settings_dialog.py  theme.py
src/hallucination_checker/gui/themes/: __init__.py
src/hallucination_checker/gui/themes/colorblind/: style.qss  theme.json
src/hallucination_checker/gui/themes/dark/: style.qss  theme.json
src/hallucination_checker/gui/themes/default/: style.qss  theme.json
src/hallucination_checker/io/: __init__.py  document_text.py  docx_reader.py  format_checks.py  reporter.py
tests/: conftest.py  test_cross_validate.py  test_declaration.py  test_doc_view_output.html  test_evidence.py  test_gui.py  test_io_factories.py  test_io_formats.py  test_l4_web_verify.py  test_regression.py  test_unit.py
tests/test_io/: __init__.py
tests/test_layers/: __init__.py
workspace/U/: README.md
